--- a/jupyter_configuration.ipynb
+++ b/jupyter_configuration.ipynb
@@ -75,7 +75,7 @@
     "#### install ipykernel\n",
     "pip install ipykernel\n",
     "#### install virtual env by given command\n",
-    "pythin -m ipykernel install --user --name <virtual_env_name> --display-name displaynamehere"
+    "python -m ipykernel install --user --name <virtual_env_name> --display-name displaynamehere"
    ]
   },
   {
