--- a/jupyter_configuration.ipynb
+++ b/jupyter_configuration.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "### to create a new virtual environment \n",
-    " conda create -n myenv python==3.6\n",
+    " conda create -n myenv python=3.6\n",
     "### to activate new environment \n",
     "conda acivate myenv\n",
     "### to deactivate \n",
