--- a/jupyter_configuration.ipynb
+++ b/jupyter_configuration.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "#### optimal setting for theme and text\n",
-    "jt -t onedork -fs 120 -ofs 12 -altp -tfs 12 -nfs 115 -cellw 88% -lineh 120 -T -N"
+    "jt -t monokai -f liberation -fs 11 -nf ptsans -nfs 11 -N -kl -cursw 2 -cursc x -cellw 95% -T"
    ]
   }
  ],
