--- a/jupyter_configuration.ipynb
+++ b/jupyter_configuration.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "#### optimal setting for theme and text\n",
-    "jt -t monokai -f liberation -fs 11 -nf ptsans -nfs 11 -N -kl -cursw 2 -cursc x -cellw 95% -T"
+    "jt -t monokai -f liberation -fs 10 -nf ptsans -nfs 10 -ofs	10 -N -kl -cursw 2 -cursc x -cellw 95% -T"
    ]
   }
  ],
